--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "nextjs",
+  "name": "sam-gov-explorer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.8.4",
-    "dotenv": "^16.4.7",
+    "fs-extra": "^11.2.0",
     "next": "15.2.4",
+    "papaparse": "^5.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
