--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
+    "csv-parse": "^5.6.0",
     "fs-extra": "^11.2.0",
     "next": "15.2.4",
     "papaparse": "^5.4.1",
